# zqlCmake

./: CMakeLists.txt  README.md
ChatGenerator/: CMakeLists.txt  ChatGenerator.db  chat.cpp  chat.h  main.cpp
Log/: CMakeLists.txt  log.cpp  log.h  test.cpp
Log/testlog/: error_2021-05-30.txt  info_2021-05-30.txt
TimeRecorderConsole/: CMakeLists.txt  Console.cpp  Console.h  RCD.h  README.md  SQL.h  SQLite.cpp  SQLite.h  TimeRecorder.cpp  TimeRecorder.h  main.cpp  tinyLog.cpp  tinyLog.h
TimeRecorderConsole/myTest/: CMakeLists.txt  README.md  test.bat  windowsSwitch.cpp
TimeRecorderConsole/resources/: Recorder.db
TimeRecorderConsoleOld/: CMakeLists.txt  Monitor.cpp  Monitor.h  SQLOperator.cpp  SQLOperator.h  main.cpp  test.cpp
TinyLog/: CMakeLists.txt  README.md  test.cpp  tinyLog.cpp  tinyLog.h
weather/: CMakeLists.txt  README.md  main.cpp  web_of_amap.cpp  web_of_amap.h
zqlLearn/: CMakeLists.txt  README.md  vscode.md
zqlLearn/cmake/cmake_lib/: CMakeLists.txt  README.md  main.cpp
zqlLearn/cmake/cmake_lib/sub/: CMakeLists.txt  test.cpp  test.h
zqlLearn/cmake/cmake_vcpkg_test/: CMakeLists.txt  README.md  main.cpp
zqlLearn/example/: CMakeLists.txt  example_glog.cpp  example_sqlite.c  sqlite_test.db
zqlTools/: CMakeLists.txt
zqlTools/include/: all_include.h  log.h  table.h  zqlTools.h
zqlTools/src/: test.cpp
